# test-template

./: CONTRIBUTING.md  README.md  copier.yml  pyproject.toml
.github/workflows/: test.yml
src/: .pre-commit-config.yaml.jinja  .pylintrc-mandatory.jinja  LICENSE  README.md.jinja  {% if odoo_version > 12 %}.eslintrc.yml{% endif %}  {% if odoo_version > 12 %}.prettierrc.yml{% endif %}  {% if use_ruff %}.ruff.toml{% endif%}.jinja
tests/: conftest.py  test_copy.py  test_pre_commit.py
version-specific/13.0/: .pre-commit-config.yaml.jinja
version-specific/mqt-compat/: .pre-commit-config.yaml.jinja  .pylintrc-mandatory.jinja
